# pihole-mcp

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  missing_tool.yml
.github/workflows/: test.yml
docs/plans/: consolidated-tool-map.md
src/pihole_mcp/: __init__.py  __main__.py  client.py  config.py  errors.py  server.py
src/pihole_mcp/tools/: __init__.py  blocking.py  domains.py  local_dns.py  maintenance.py  queries.py  stats.py
tests/: conftest.py  test_client.py  test_config.py  test_tools.py
