[project]
name = "chris2ao-pihole-mcp"
version = "0.1.0"
description = "Unified Pi-hole v6 MCP server consolidating tools from three upstream MCPs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Chris Johnson", email = "chris2ao@gmail.com" }]

dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[project.scripts]
chris2ao-pihole-mcp = "pihole_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pihole_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live Pi-hole instance",
]

[tool.coverage.run]
source = ["pihole_mcp"]

[tool.coverage.report]
fail_under = 80
